Allow wildcard in the blacklist config option [push]
Re-enable GameStages support