@@ -9,7 +9,6 @@ import net.minecraftforge.eventbus.api.SubscribeEvent;
 import net.minecraftforge.fml.event.config.ModConfigEvent;
 import org.apache.commons.lang3.tuple.Pair;
 
-import java.util.Collections;
 import java.util.List;
 
 public class StructureConfig {
@@ -31,8 +30,9 @@ public class StructureConfig {
 					.define("locateUnexplored", false);
 
 			structureBlacklist = builder
-					.comment("Defines which structures can't be searched with the Structure Compass")
-					.defineListAllowEmpty(Collections.singletonList("structureBlacklist"), () -> Collections.singletonList(""), o -> (o instanceof String));
+					.comment("Defines which structures can't be searched with the Structure Compass\n" +
+							"(Supports wildcard *, Example: 'minecraft:*' will blacklist anything in the minecraft domain)")
+					.defineListAllowEmpty(List.of("structureBlacklist"), () -> List.of(""), o -> (o instanceof String));
 
 			builder.pop();
 		}
